<resources>
    <string name="app_name">Chatx</string>
    <string name="Accedi">Accedi</string>
    <string name="Registrati">Registrati</string>
    <string name="Indietro">Indietro</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up">Nuovo utente? Registrati</string>

    <string name="title_home">Home</string>

    <string name="title_activity_NuovaStanza">Nuova Stanza</string>
    <string name="text_new_room">Crea Stanza</string>

    <string name="title_activity_UtentiAttesa">Utenti In Attesa</string>

    <string name="title_activity_Profilo">Profilo</string>
    <string name="text_profilo">Profilo</string>

    <string name="no_input">Questo campo non può essere vuoto</string>
    <string name="label_room_name">Nome stanza</string>
    <string name="request_access">Vuoi chiedere l\'accesso a questa stanza?</string>
    <string name="request_waiting_user">Vuoi permettere all\'utente di accedere a questa stanza?</string>
    <string name="message_hint">Enter Message</string>
    <string name="send_button">INVIA</string>
    <string name="message_sender">TextView</string>
    <string name="received_message">Receiver Message</string>
    <string name="sent_message">sent message</string>
    <string name="rename_room">Rinonima stanza</string>
    <string name="delete_room">Elimina stanza</string>
    <string name="room_textView">Inserisci un nuovo nome per la stanza</string>
    <string name="leave_room">Abbandona stanza</string>
    <string name="menu">menu</string>
    <string name="logout">Esci</string>
</resources>