<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mikefonseta.chatx.Fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_nuova_stanza"
        android:name="com.mikefonseta.chatx.Fragment.NewRoomFragment"
        android:label="@string/title_activity_NuovaStanza"
        tools:layout="@layout/fragment_nuova_stanza" />

    <fragment
        android:id="@+id/navigation_profilo"
        android:name="com.mikefonseta.chatx.Fragment.ProfileFragment"
        android:label="@string/title_activity_Profilo"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_utenti_attesa"
        android:name="com.mikefonseta.chatx.Fragment.UtentiInAttesaFragment"
        android:label="@string/title_activity_UtentiAttesa"
        tools:layout="@layout/fragment_utenti_attesa" />
</navigation>