<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccediActivity">

    <TextView
        android:id="@+id/UsernametextView"
        android:layout_width="98dp"
        android:layout_height="33dp"
        android:layout_marginEnd="72dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/username_Text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/username_Text"
        android:layout_width="173dp"
        android:layout_height="51dp"
        android:background="#7C90C5"
        android:drawableTint="#5C0909"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <Button
        android:id="@+id/login"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:onClick="onClickLogin"
        android:text="@string/Accedi"
        android:textColor="@color/white"
        app:circularflow_angles="50dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/indietro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/indietro"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:onClick="onClickIndietro"
        android:text="@string/Indietro"
        android:textColor="@color/white"
        app:circularflow_angles="50dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="171dp"
        android:layout_height="49dp"
        android:background="#7C90C5"
        android:drawableTint="#5C0909"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <TextView
        android:id="@+id/PasswordtextView"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernametextView" />


</androidx.constraintlayout.widget.ConstraintLayout>